Anpassung CheckUsername (funktioniert noch nicht korrekt). Die php Datei wird nicht gefunden.

--- a/Kundenportal/registrierung.html
+++ b/Kundenportal/registrierung.html
@@ -142,7 +142,7 @@
             <input name="inhaber" type="text" class="input-field" id="inhaber" required><br>
 
             <button type="button" class="button" onclick="switchTab('kontaktdaten')">Zurück</button>
-            <button type="button" class="weiter-button" onclick="validiereFormularZahlung()">Registrieren</button>
+            <button type="button" class="weiter-button" id="registrierenButton" onclick="validiereFormularZahlung()">Registrieren</button>
         </div>
     </section>
 </form>
