Validierung bei Benutzerdaten und Kontaktdaten eingefügt. Funktioniert!!

--- a/Kundenportal/login.html
+++ b/Kundenportal/login.html
@@ -177,7 +177,7 @@
         }
     }
 
-    function pruefeBenutzername() {
+   /* function pruefeBenutzername() {
         var username = document.getElementById("forgotPasswordUsername").value;
         alert("test");
         checkUsername(benutzername, function(exists) {
@@ -189,10 +189,7 @@
                 document.getElementById('username_error').style.display = 'none';
                 error = false; // Setzt den Fehlerstatus auf false, wenn der Benutzername nicht existiert
             }
-    }
-
-
-
+    }*/
 </script>
 
 </body>
