--- a/CRM-System/marketingStartseite.html
+++ b/CRM-System/marketingStartseite.html
@@ -96,9 +96,28 @@
                 <p>Starten Sie eine neue Marketingaktion, um Ihre Kunden zu erreichen und neue Interessenten zu gewinnen.</p>
                 <button onclick="window.location.href='marketingaktionStarten.php'">Marketingaktion durchführen</button>
             </div>
+
             <div class="button-box">
-                <p>Besuchen Sie das Dashboard, um aktuelle Statistiken und Analysen Ihrer Kampagnen zu sehen.</p>
-                <button onclick="window.location.href='dashboard.php'">Dashboard</button>
+                <p>Automatisieren Sie Ihre Marketingaktionen, um spezielle Anlässe wie Geburtstage und Treue-Jubiläen Ihrer Kunden zu feiern.</p>
+                <form action="mail_geburtstagCodesVersenden.php" method="post">
+                    <button type="submit">Geburtstag</button>
+                </form>
+                <form action="mail_treueJubilaeum.php" method="post">
+                    <button type="submit">Treue-Jubiläum</button>
+                </form>
+            </div>
+
+            <div class="button-box">
+                <p>Versenden Sie Erinnerungs-E-Mails, um Ihre Kunden an ausstehende Aktionen oder Follow-Ups zu erinnern.</p>
+                <form action="mail_nachfassen.php" method="post">
+                    <button type="submit">E-Mails versenden</button>
+                </form>
+            </div>
+
+            <div class="button-box">
+                <p>Analysieren Sie die Effektivität Ihrer Rabattcodes und die allgemeine Kundenaktivität anhand detaillierter Berichte.</p>
+                <button onclick="window.open('http://localhost:3000/d/ddptnazf4qfb4f/marketingauswertung-rabattcodes?orgId=1&from=1719830895671&to=17198524956716&kiosk', '_blank')">Rabattcodes auswerten</button>
+                <button onclick="window.open('http://localhost:3000/d/fdq1g0tmlgs8wc/kundenauswertung?orgId=1&from=1719831068935&to=1719852668935&kiosk', '_blank')">Kundenauswertung</button>
             </div>
         </div>
     </section>
