--- a/CRM-System/marketingStartseite.html
+++ b/CRM-System/marketingStartseite.html
@@ -82,7 +82,7 @@
         <div class="link-container">
             <a href="javascript:history.back()" class="link"><i class="bi bi-arrow-left"></i> Zurück</a>
             <a href="verwaltungStartseite.html" class="link" onclick="event.preventDefault();"><i class="bi bi-house"></i> Startseite</a>
-            <a href="#" class="link"><i class="bi bi-door-closed"></i> Abmelden</a>
+            <a href="index.html" class="link"><i class="bi bi-door-closed"></i> Abmelden</a>
         </div>
     </nav>
     
